# lazy-eye

./: Cargo.toml  build.rs  tray-icon.rc
src/: main.rs
